@@ -1,6 +1,7 @@
 from ftw.testing import MockTestCase
 from ftw.upgrade.exceptions import CyclicDependencies
 from ftw.upgrade.utils import SizedGenerator
+from ftw.upgrade.utils import format_duration
 from ftw.upgrade.utils import get_sorted_profile_ids
 from ftw.upgrade.utils import topological_sort
 from unittest2 import TestCase
@@ -95,3 +96,64 @@ class TestSortedProfileIds(MockTestCase):
 
         self.assertEqual(cm.exception.dependencies,
                          [('foo', 'bar'), ('bar', 'foo')])
+
+
+class TestFormatDuration(TestCase):
+
+    def test_zero_seconds_is_supported(self):
+        self.assertEqual('0 seconds', format_duration(0))
+
+    def test_single_second_is_singular(self):
+        self.assertEqual('1 second', format_duration(1))
+
+    def test_multiple_seconds_is_plural(self):
+        self.assertEqual('2 seconds', format_duration(2))
+
+    def test_single_minute_is_singular(self):
+        self.assertEqual(['1 minute',
+                          '1 minute, 1 second',
+                          '1 minute, 2 seconds'],
+
+                         [format_duration(60),
+                          format_duration(60 + 1),
+                          format_duration(60 + 2)])
+
+    def test_multiple_minutes_is_plural(self):
+        self.assertEqual(['2 minutes, 1 second',
+                          '2 minutes, 2 seconds'],
+
+                         [format_duration((2 * 60) + 1),
+                          format_duration((2 * 60) + 2)])
+
+    def test_single_hour_is_singular(self):
+        self.assertEqual(['1 hour',
+                          '1 hour, 1 minute',
+                          '1 hour, 2 minutes, 1 second',
+                          '1 hour, 2 minutes, 2 seconds'],
+
+                         [format_duration((60 * 60)),
+                          format_duration((60 * 60) + 60),
+                          format_duration((60 * 60) + (2 * 60) + 1),
+                          format_duration((60 * 60) + (2 * 60) + 2)])
+
+    def test_multiple_hours_is_plural(self):
+        self.assertEqual(['2 hours',
+                          '2 hours, 1 minute',
+                          '2 hours, 2 minutes, 1 second',
+                          '2 hours, 2 minutes, 2 seconds'],
+
+                         [format_duration((2 * 60 * 60)),
+                          format_duration((2 * 60 * 60) + 60),
+                          format_duration((2 * 60 * 60) + (2 * 60) + 1),
+                          format_duration((2 * 60 * 60) + (2 * 60) + 2)])
+
+    def test_floating_point_seconds_are_ceiled(self):
+        self.assertEqual(['1 second',
+                          '1 second',
+                          '2 seconds',
+                          '2 seconds'],
+
+                         [format_duration(0.1),
+                          format_duration(0.9),
+                          format_duration(1.1),
+                          format_duration(1.9)])
