@@ -5,6 +5,10 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Improve logging while installing upgrade steps.
+  Show duration for installing.
+  [jone]
+
 - Fix upgrade step icons for Plone 4.3.
   [jone]
 
